First deploy to stage

--- a/bebeclick/Static.html
+++ b/bebeclick/Static.html
@@ -8,22 +8,32 @@
 <body>
     <div id="__membership">
         <div id="__social"><img src="Content/Images/tw_icon.png" /><img src="Content/Images/fb_icon.png" /><img src="Content/Images/pt_icon.png" /></div>
-        <div id="__account">REGISTRATE | INICIA SESIÓN</div>
+        <div id="__account"><a class="__rbt58b" href="">REGISTRATE</a><span class="__rbt58b">&nbsp;&nbsp;|&nbsp;&nbsp;</span><a class="__rbt58b" href="">INICIA SESIÓN</a></div>
     </div>
     <div id="__menu_bar">
         <div id="__logo"><a class="home" href="/default" target="_blank"></a></div>
-        <a id="_ctrl_home" class="__item __ctrl" href="/home"><span class="title">HOME</span></a>
-        <a id="_ctrl_search" class="__item __ctrl" href="/search"><span class="title">BUSCA</span></a>
-        <a id="_ctrl_recommend" class="__item __ctrl" href="/recommend"><span class="title">RECOMIENDA</span></a>
-        <a id="_ctrl_enterprises" class="__item __ctrl" href="/enterprise"><span class="title">EMPRESAS</span></a>
-        <a id="_ctrl_inspiration" class="__item __ctrl" href="/inspiration"><span class="title">INSPIRACIÓN</span></a>
-        <a id="_ctrl_contact" class="__item __ctrl" href="/contact"><span class="title">CONTACTO</span></a>
+        <a id="_ctrl_home" class="__item __rbtUpWh" href="/home"><span class="title">HOME</span></a>
+        <a id="_ctrl_search" class="__item __rbtUpWh" href="/search"><span class="title">BUSCA</span></a>
+        <a id="_ctrl_recommend" class="__item __rbtUpWh" href="/recommend"><span class="title">RECOMIENDA</span></a>
+        <a id="_ctrl_enterprises" class="__item __rbtUpWh" href="/enterprise"><span class="title">EMPRESAS</span></a>
+        <a id="_ctrl_inspiration" class="__item __rbtUpWh" href="/inspiration"><span class="title">INSPIRACIÓN</span></a>
+        <a id="_ctrl_contact" class="__item __rbtUpWh" href="/contact"><span class="title">CONTACTO</span></a>
         <div id="__quick_search">
             <input class="search" type="text" />
             <input type="button" class="search"/>
         </div>
     </div>
-    <div id="__testimonial"></div>
+    <div id="__testimonial">
+        <div id="__searchAndRecommend">
+            <div id="__search">
+                <select id="__state"></select>
+                <select id="__product"></select>
+                <select id="__service"></select>
+            </div>
+            <div id="__recommend">
+            </div>
+        </div>
+    </div>
     <div id="__outstanding"></div>
 </body>
 </html>
