--- a/bebeclick/Static.html
+++ b/bebeclick/Static.html
@@ -23,8 +23,11 @@
             <input type="button" class="search"/>
         </div>
     </div>
-    <div id="__testimonial">
+    <div id="__main">
+        <div id="__testimonial"><h3>Idea interior</h3><p>"Remodelamos toda la habitación del bebé. Una increíble atención y unos super precios.<br />Fernanda Rojas"</p></div>
         <div id="__searchAndRecommend">
+            <div id="__search_title">Busca</div>
+            <div id="__recommend_title">Recomienda</div>
             <div id="__search">
                 <select id="__state"></select>
                 <select id="__product"></select>
