Adding background image on default

--- a/bebeclick/Static.html
+++ b/bebeclick/Static.html
@@ -25,7 +25,7 @@
     </div>
     <div id="__main">
         <div id="__testimonial"><h3>Idea interior</h3><p>"Remodelamos toda la habitación del bebé. Una increíble atención y unos super precios.<br />Fernanda Rojas"</p></div>
-        <div id="__searchAndRecommend">
+        <div id="__search_recommend">
             <div id="__search_title">Busca</div>
             <div id="__recommend_title">Recomienda</div>
             <div id="__search">
