--- a/bebeclick/Static.html
+++ b/bebeclick/Static.html
@@ -4,39 +4,50 @@
     <title></title>
     <link type="text/css" rel="stylesheet" href="Content/fonts.css" />
     <link type="text/css" rel="stylesheet" href="Content/default.css" />
+    <link type="text/css" rel="stylesheet" href="Content/homeIndex.css" />
 </head>
 <body>
-    <div id="__membership">
-        <div id="__social"><img src="Content/Images/tw_icon.png" /><img src="Content/Images/fb_icon.png" /><img src="Content/Images/pt_icon.png" /></div>
-        <div id="__account"><a class="__rbt58b" href="">REGISTRATE</a><span class="__rbt58b">&nbsp;&nbsp;|&nbsp;&nbsp;</span><a class="__rbt58b" href="">INICIA SESIÓN</a></div>
-    </div>
-    <div id="__menu_bar">
-        <div id="__logo"><a class="home" href="/default" target="_blank"></a></div>
-        <a id="_ctrl_home" class="__item __rbtUpWh" href="/home"><span class="title">HOME</span></a>
-        <a id="_ctrl_search" class="__item __rbtUpWh" href="/search"><span class="title">BUSCA</span></a>
-        <a id="_ctrl_recommend" class="__item __rbtUpWh" href="/recommend"><span class="title">RECOMIENDA</span></a>
-        <a id="_ctrl_enterprises" class="__item __rbtUpWh" href="/enterprise"><span class="title">EMPRESAS</span></a>
-        <a id="_ctrl_inspiration" class="__item __rbtUpWh" href="/inspiration"><span class="title">INSPIRACIÓN</span></a>
-        <a id="_ctrl_contact" class="__item __rbtUpWh" href="/contact"><span class="title">CONTACTO</span></a>
-        <div id="__quick_search">
-            <input class="search" type="text" />
-            <input type="button" class="search"/>
+    <div id="__container">
+        <div id="__membership">
+            <div id="__social"><img src="Content/Images/tw_icon.png" /><img src="Content/Images/fb_icon.png" /><img src="Content/Images/pt_icon.png" /></div>
+            <div id="__account"><a class="__rbt58b" href="">REGISTRATE</a><span class="__rbt58b">&nbsp;&nbsp;|&nbsp;&nbsp;</span><a class="__rbt58b" href="">INICIA SESIÓN</a></div>
         </div>
-    </div>
-    <div id="__main">
-        <div id="__testimonial"><h3>Idea interior</h3><p>"Remodelamos toda la habitación del bebé. Una increíble atención y unos super precios.<br />Fernanda Rojas"</p></div>
-        <div id="__search_recommend">
-            <div id="__search_title">Busca</div>
-            <div id="__recommend_title">Recomienda</div>
-            <div id="__search">
-                <select id="__state"></select>
-                <select id="__product"></select>
-                <select id="__service"></select>
-            </div>
-            <div id="__recommend">
+        <div id="__menu_bar">
+            <div id="__logo"><a class="home" href="/default" target="_blank"></a></div>
+            <a id="_ctrl_home" class="__item __rbtUpWh" href="/home"><span class="title">HOME</span></a>
+            <a id="_ctrl_search" class="__item __rbtUpWh" href="/search"><span class="title">BUSCA</span></a>
+            <a id="_ctrl_recommend" class="__item __rbtUpWh" href="/recommend"><span class="title">RECOMIENDA</span></a>
+            <a id="_ctrl_enterprises" class="__item __rbtUpWh" href="/enterprise"><span class="title">EMPRESAS</span></a>
+            <a id="_ctrl_inspiration" class="__item __rbtUpWh" href="/inspiration"><span class="title">INSPIRACIÓN</span></a>
+            <a id="_ctrl_contact" class="__item __rbtUpWh" href="/contact"><span class="title">CONTACTO</span></a>
+            <div id="__quick_search">
+                <input class="search" type="text" />
+                <input type="button" class="search" />
             </div>
         </div>
+        <div id="__main">
+            <div id="__testimonial"><h3>Idea interior</h3><p>"Remodelamos toda la habitación del bebé. Una increíble atención y unos super precios.<br />Fernanda Rojas"</p></div>
+            <div id="__search_recommend">
+                <div id="__search_title">Busca</div>
+                <div id="__recommend_title">Recomienda</div>
+                <div id="__search">
+                    <select id="__state" class="search"></select>
+                    <select id="__product" class="search"></select>
+                    <select id="__service" class="search"></select>
+                    <input type="button" id="__search_button" class="go" name="search" value="Ir" />
+                </div>
+                <div id="__recommend">
+                    <input type="button" class="go" name="recommend" value="Recomendar" />
+                </div>
+            </div>
+            <div id="__search_recommend_background"></div>
+        </div>
+        <div id="__footer">
+            <div class="inner">
+                <span id="__copyright">Bebeclick. Todos los derechos reservados 2014.</span>
+                <span id="__terms">Términos y condiciones</span>
+            </div>
+        </div>
     </div>
-    <div id="__outstanding"></div>
 </body>
 </html>
