Registering facebook users

--- a/bebeclick/Static.html
+++ b/bebeclick/Static.html
@@ -4,7 +4,7 @@
     <title></title>
     <link type="text/css" rel="stylesheet" href="Content/fonts.css" />
     <link type="text/css" rel="stylesheet" href="Content/default.css" />
-    <link type="text/css" rel="stylesheet" href="Content/homeIndex.css" />
+    <link type="text/css" rel="stylesheet" href="Content/home/index.css" />
 </head>
 <body>
     <div id="__container">
