Addin login partial as a widget

--- a/bebeclick/HomeAnonymous.html
+++ b/bebeclick/HomeAnonymous.html
@@ -31,7 +31,10 @@
     <div id="__container">
         <div id="__membership">
             <div id="__social"><img src="Content/Images/tw_icon.png" /><img src="Content/Images/fb_icon.png" /><img src="Content/Images/pt_icon.png" /></div>
-            <div id="__account"><a class="__rbt58b" href="">REGISTRATE</a><span class="__rbt58b">&nbsp;&nbsp;|&nbsp;&nbsp;</span><a class="__rbt58b" href="">INICIA SESIÓN</a></div>
+            <div id="__account">
+                <a class="__rbt58b" href="">INICIA SESIÓN</a>
+                <span class="__rbt58b">&nbsp;&nbsp;|&nbsp;&nbsp;</span>
+                <a class="__rbt58b" href="">REGISTRATE</a></div>
         </div>
         <div id="__menu_bar">
             <div id="__logo"><a class="home" href="/default" target="_blank"></a></div>
@@ -52,9 +55,9 @@
                 <div id="__search_title">Busca</div>
                 <div id="__recommend_title">Recomienda</div>
                 <div id="__search">
-                    <select id="__state" class="search"></select>
-                    <select id="__product" class="search"></select>
-                    <select id="__service" class="search"></select>
+                    <select id="__states" class="search"></select>
+                    <select id="__products" class="search"></select>
+                    <select id="__services" class="search"></select>
                     <input type="button" id="__search_button" class="go" name="search" value="Ir" />
                 </div>
                 <div id="__recommend">
