Logoff, manage links, menu stlye included.

--- a/bebeclick/HomeUser.html
+++ b/bebeclick/HomeUser.html
@@ -5,8 +5,8 @@
     <link type="text/css" rel="stylesheet" href="Content/fonts.css" />
     <link type="text/css" rel="stylesheet" href="Content/default.css" />
     <link type="text/css" rel="stylesheet" href="Content/home/index.css" />
-    <link type="text/css" rel="stylesheet" href="Content/account/externalLogin.css" />
-    <link type="text/css" rel="stylesheet" href="Content/bootstrap.css" />
+    <link type="text/css" rel="stylesheet" href="Content/account/login.css" />
+    <!--<link type="text/css" rel="stylesheet" href="Content/bootstrap.css" />-->
     <script type="text/javascript" src="Scripts/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" src="Scripts/jquery-ui-1.10.4.min.js"></script>
     <script type="text/javascript" src="Scripts/jquery-ui-datepicker-es.js"></script>
